welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:1: error: not found: value enFaceMur
while (enFaceMur()==false) {avance}
       ^Runner:3: error: not found: value enFaceMur
while (enFaceMur()) {gauche();avance();droite();avance()}
       ^