welcome.lessons.welcome.loopfor.LoopStairs.scala.code
while (enFaceMur()==false) {avance}

while (enFaceMur()) {gauche();avance();droite();avance()}
avance(3)